Starting project - Ts - Js - Css - Html Works

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Github-api</title>
 </head>
 <body>
-    <h1>
-        Github-api
-    </h1>
+    <div id="app">
 
-    <script src="index.js"></script>
+    </div>
+    <script src="index.ts"></script>
+    <script src="main.ts"></script>
 </body>
 </html>
