--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="dist/main.js"></script>
     <title>Github-api</title>
 </head>
 <body>
     <div id="app">
-
+        <div id="searchBar">
+            <input type="text" id="search" placeholder="Search">
+            <button id="searchBtn" type="submit">Search</button>
+        </div>
     </div>
-    <script src="index.ts"></script>
-    <script src="main.ts"></script>
 </body>
 </html>
