--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://unpkg.com/vite@latest/dist/vite.js"></script>
+    <script type="module" src="src/main.ts"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="dist/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Github-api</title>
 </head>
 <body>
