Writing the name of the Searched Repo on the Template

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             <input type="text" id="search" placeholder="Search">
             <button id="searchBtn" type="submit">Search</button>
         </div>
+        <div id="template">
+            <div id="repo-name">
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
