Proceeding with the installation of a Bundler

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vite@latest/dist/vite.js"></script>
-    <script src="dist/main.js"></script>
+    <script type="module" src="dist/main.js"></script>
     <title>Github-api</title>
 </head>
 <body>
