Bundle.js created and Webpack installed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vite@latest/dist/vite.js"></script>
     <script type="module" src="dist/main.js"></script>
+    <script src="dist/bundle.js"></script>
     <title>Github-api</title>
 </head>
 <body>
