--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Github Repository Search</title>
 </head>
+
 <body>
     <div id="app">
         <div id="searchBar">
             <input type="text" id="search" placeholder="Search repositories">
             <button id="searchBtn" type="button">Search</button>
         </div>
-        <div id="repo-name"></div>
+        <div id="repo-wrapper" class="wrapper">
+            <div class="banner-image"> </div>
+            <h1 id="repo-name"></h1>
+            <p>Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit.</p>
+        </div>
+        <div class="button-wrapper">
+            <button class="btn outline">DETAILS</button>
+            <button class="btn fill">BUY NOW</button>
+        </div>
+    </div>
+
+
     </div>
     <script src="dist/bundle.js"></script>
 </body>
+
 </html>
