--- a/index.html
+++ b/index.html
@@ -9,21 +9,112 @@
 </head>
 
 <body>
+    <div id="searchBar">
+        <input type="text" id="search" placeholder="Search repositories">
+        <button id="searchBtn" type="button">Search</button>
+    </div>
     <div id="app">
-        <div id="searchBar">
-            <input type="text" id="search" placeholder="Search repositories">
-            <button id="searchBtn" type="button">Search</button>
+        <div id="repo-wrapper" class="wrapper">
+            <div class="banner-image"> </div>
+            <h1 id="repo-name"></h1>
+            <p>Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit.</p>
+                <div class="button-wrapper">
+                    <button class="btn outline">DETAILS</button>
+                    <button class="btn fill">BUY NOW</button>
+                </div>
         </div>
         <div id="repo-wrapper" class="wrapper">
             <div class="banner-image"> </div>
             <h1 id="repo-name"></h1>
             <p>Lorem ipsum dolor sit amet, <br />
                 consectetur adipiscing elit.</p>
+                <div class="button-wrapper">
+                    <button class="btn outline">DETAILS</button>
+                    <button class="btn fill">BUY NOW</button>
+                </div>
         </div>
-        <div class="button-wrapper">
-            <button class="btn outline">DETAILS</button>
-            <button class="btn fill">BUY NOW</button>
+        <div id="repo-wrapper" class="wrapper">
+            <div class="banner-image"> </div>
+            <h1 id="repo-name"></h1>
+            <p>Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit.</p>
+                <div class="button-wrapper">
+                    <button class="btn outline">DETAILS</button>
+                    <button class="btn fill">BUY NOW</button>
+                </div>
         </div>
+        <div id="repo-wrapper" class="wrapper">
+            <div class="banner-image"> </div>
+            <h1 id="repo-name"></h1>
+            <p>Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit.</p>
+                <div class="button-wrapper">
+                    <button class="btn outline">DETAILS</button>
+                    <button class="btn fill">BUY NOW</button>
+                </div>
+        </div>
+        <div id="repo-wrapper" class="wrapper">
+            <div class="banner-image"> </div>
+            <h1 id="repo-name"></h1>
+            <p>Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit.</p>
+                <div class="button-wrapper">
+                    <button class="btn outline">DETAILS</button>
+                    <button class="btn fill">BUY NOW</button>
+                </div>
+        </div>
+        <div id="repo-wrapper" class="wrapper">
+            <div class="banner-image"> </div>
+            <h1 id="repo-name"></h1>
+            <p>Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit.</p>
+                <div class="button-wrapper">
+                    <button class="btn outline">DETAILS</button>
+                    <button class="btn fill">BUY NOW</button>
+                </div>
+        </div>
+        <div id="repo-wrapper" class="wrapper">
+            <div class="banner-image"> </div>
+            <h1 id="repo-name"></h1>
+            <p>Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit.</p>
+                <div class="button-wrapper">
+                    <button class="btn outline">DETAILS</button>
+                    <button class="btn fill">BUY NOW</button>
+                </div>
+        </div>
+        <div id="repo-wrapper" class="wrapper">
+            <div class="banner-image"> </div>
+            <h1 id="repo-name"></h1>
+            <p>Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit.</p>
+                <div class="button-wrapper">
+                    <button class="btn outline">DETAILS</button>
+                    <button class="btn fill">BUY NOW</button>
+                </div>
+        </div>
+        <div id="repo-wrapper" class="wrapper">
+            <div class="banner-image"> </div>
+            <h1 id="repo-name"></h1>
+            <p>Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit.</p>
+                <div class="button-wrapper">
+                    <button class="btn outline">DETAILS</button>
+                    <button class="btn fill">BUY NOW</button>
+                </div>
+        </div>
+        <div id="repo-wrapper" class="wrapper">
+            <div class="banner-image"> </div>
+            <h1 id="repo-name"></h1>
+            <p>Lorem ipsum dolor sit amet, <br />
+                consectetur adipiscing elit.</p>
+                <div class="button-wrapper">
+                    <button class="btn outline">DETAILS</button>
+                    <button class="btn fill">BUY NOW</button>
+                </div>
+        </div>
+        
     </div>
 
 
