Adding dropdown to the Index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 <body>
     <div id="searchBar">
         <input type="text" id="search" placeholder="Search repositories">
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown button
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Repositories</a></li>
+              <li><a class="dropdown-item" href="#">Users</a></li>
+            </ul>
+          </div>
         <button id="searchBtn" type="button">Search</button>
     </div>
     <div id="app"></div>
