--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Github Repository Search</title>
+    <title>Github Search</title>
 </head>
 <body>
     <div id="searchBar">
-        <div id="dropdown" class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown button
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Repositories</a></li>
-              <li><a class="dropdown-item" href="#">Users</a></li>
-            </ul>
-          </div>
-        <input type="text" id="search" placeholder="Search repositories">
+        <select id="searchType">
+            <option value="repositories">Repositories</option>
+            <option value="users">Users/Organizations</option>
+        </select>
+        <input type="text" id="search" placeholder="Search GitHub">
         <button id="searchBtn" type="button">Search</button>
     </div>
     <div id="app"></div>
