Adding CSS style for the Cards

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <input type="text" id="search" placeholder="Search GitHub">
         <button id="searchBtn" type="button">Search</button>
     </div>
-    <div id="app"></div>
+    <div id="app">
+        <p>Please enter a search term.</p>
+    </div>
     <script src="dist/bundle.js"></script>
 </body>
 </html>
