--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
         <button id="searchBtn" type="button">Search</button>
     </div>
     <div id="app">
-        <p>Please enter a search term.</p>
+        <div id="cardTemplate" class="wrapper" style="display:none;">
+            <div class="banner-image"></div>
+            <h1 class="card-title">Title</h1>
+            <p class="card-description">Description</p>
+            <p class="card-stars">Stars: 0</p>
+            <div class="button-wrapper">
+                <a href="#" target="_blank" class="btn outline">VIEW ON GITHUB</a>
+            </div>
+        </div>
     </div>
+    
     <script src="dist/bundle.js"></script>
 </body>
 </html>
