Changing way to make this working

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         <button id="searchBtn" type="button">Search</button>
     </div>
     <div id="app">
+        <div class="col-md-4 d-none" id="repoCardTemplate">
+            <div class="wrapper">
+                <h1 class="repo-name"></h1>
+                <p class="repo-description"></p>
+                <p class="repo-stars"></p>
+                <div class="button-wrapper">
+                    <a href="#" target="_blank" class="btn outline repo-link">VIEW ON GITHUB</a>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="dist/bundle.js"></script>
 </body>
