--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button id="searchBtn" type="button">Search</button>
     </div>
     <div id="app">
-        <div class="col-md-4 d-none" id="repoCardTemplate">
+        <div class="" id="repoCardTemplate">
             <div class="wrapper">
                 <h1 class="repo-name"></h1>
                 <p class="repo-description"></p>
